# minecraft-clone

./: .gitignore  CMakeLists.txt  README.md
dependencies/include/: stb_image.h
include/LoggingService/: LogType.h  Logger.h  LoggingUtils.h
include/RenderService/: IndexBuffer.h  MeshManager.h  Renderer.h  ShaderManager.h  TextureManager.h  VertexBuffer.h
include/WindowService/: Window.h
include/WorldManager/VoxelWorld/: BlockData.h  ChunkManager.h  Commons.h  VoxelWorldManager.h  VoxelWorldRenderer.h  WorldGenerator.h
resources/shaders/: fragment.shader  vertex.shader
src/: main.cpp
src/LoggingService/: Logger.cpp  LoggingUtils.cpp
src/RenderService/: IndexBuffer.cpp  MeshManager.cpp  Renderer.cpp  ShaderManager.cpp  TextureManager.cpp  VertexBuffer.cpp
src/WindowService/: Window.cpp
src/WorldManager/VoxelWorld/: BlockData.cpp  ChunkManager.cpp  VoxelWorldManager.cpp  VoxelWorldRenderer.cpp  WorldGenerator.cpp
